Fixed task members alignment in task preview

--- a/src/styles/components/_task-preview.scss
+++ b/src/styles/components/_task-preview.scss
@@ -401,6 +401,7 @@
 
 .task-members {
     // direction: rtl;
+    display: flex;
     justify-content: flex-end;
     // float: right;
     position: relative;
